working swagger ui with /docs url
